# ai-knowledge

./: .env.example  .gitignore  README.md  compose.local.yml  compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: backend_pre_start.py  crud.py  initial_data.py  models.py  utils.py
backend/app/alembic/versions/: 0a073a23c9cd_add_knowledge_base_model.py  0f28799061ee_add_knowledge_base_model.py  3b94abeedff0_add_knowledge_base_model.py  60ea514cfc36_add_knowledge_base_model.py  6ead6fe35356_add_knowledge_base_model.py  a1b2c3d4e5f6_v2_ai_tables.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: Document.py  chat.py  documentchunk.py  eval.py  items.py  knowledge_bases.py  login.py  private.py  prompts.py  tools.py  users.py  utils.py
backend/app/core/: config.py  db.py  rate_limit.py
backend/app/eval_data/: sample_golden.json
backend/app/schemas/: chat.py
backend/app/services/: agent_service.py  chat_service.py  chunking.py  embedding_service.py  eval_service.py  llm_router.py  llm_service.py  observability.py  prompt_service.py  reranker.py  retrieval_service.py  shard_router.py  tool_registry.py  vector_store.py
backend/app/services/tools/: base.py  document_meta_tool.py  kb_info_tool.py  kb_search_tool.py  mcp_tool.py
backend/app/workers/: document_tasks.py
backend/scripts/: eval_ci.py
backend/tests/: conftest.py
backend/tests/crud/: test_user.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: item.py  user.py
docs/: README.md  agent-design.md  api.md  architecture.md  database.md  deployment.md  design-v2.md  quickstart.md  rag-pipeline.md  scaling.md
frontend/: README.md
frontend/src/: routeTree.gen.ts
frontend/src/client/: ai.ts  index.ts  knowledge.ts
frontend/src/components/Documents/: AddDocument.tsx  DeleteDocument.tsx  columns.tsx
frontend/src/components/KnowledgeBases/: AddKnowledgeBase.tsx  DeleteKnowledgeBase.tsx  EditKnowledgeBase.tsx  KnowledgeBaseActionsMenu.tsx  columns.tsx
frontend/src/components/Pending/: PendingDocuments.tsx  PendingKnowledgeBases.tsx
frontend/src/components/Sidebar/: AppSidebar.tsx
frontend/tests/: knowledge-bases.spec.ts
notes/: Agent循环踩坑.md  SSE流式踩坑.md  pgvector踩坑.md  多模型降级踩坑.md
(+7 files in other folders)
